# fp-course

./: .devcontainer.dockerfile  .editorconfig  .ghci  .ghcid  .gitignore  .gitpod.dockerfile  .gitpod.yml  .projectile  .travis.yml  ATTENDANCE  CHEATSHEET.md  Course.cabal  Course.hs  Course.lkshw  LICENSE  Optional.hs  Package.cabal  Package.lkshw  README  README.markdown  Setup.lhs  Vagrantfile  a.txt  ansible.yaml  blah.scala  build.sbt  cabal.project  changelog  course.cabal  course.lkshf  default.nix  eyeoh.hs  flake.nix  fp-course.cabal  fp-course.nix  hie.yml  package  package.cabal  runDocTest  sequence.txt  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
L01/: Validation.hs
L02/: List.hs
L03/: Parser.hs  Person.hs
L04/: Misty.hs
L05/: Testing.hs
L06/: JsonValue.hs
L07/: Anagrams.hs
L08/: FastAnagrams.hs
L09/: MetricSpace.hs
L10/: Compose.hs
TicTacToe/: TicTacToe
TicTacToe/haskell/: .ghci
TicTacToe/scala/: TicTacToe.scala
basic-syntax/: README.md
ci/: ci.nix  jobsets.json  jobsets.nix
demo/: .ghci  Package-Demo.cabal
demo/.hpc/: Main.mix
demo/src/: Main.hs
etc/: CONTRIBUTORS  LICENCE
exe/: Main.hs
fp-course-stack/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml  stack.yaml
fp-course-stack/app/: Main.hs
fp-course-stack/src/: .ghci  Course.hs
initial/: whatever.hs
intro/: intro.hs
io/: io.hs
io/answers/: io-known-functions-only.hs  io-neat.hs
nix/: default.nix  nixpkgs.nix  shell.nix  sources.json
ops/: README.md  ansible.yaml  emacs-init.el  haskell.yaml  sublime.yaml  vs-code.yaml
ops/emacs.d/: init.el
projects/NetworkServer/: NetworkServer.markdown
projects/NetworkServer/haskell/: .ghci  Setup.lhs  network-server.cabal
projects/NetworkServer/haskell/etc/: LICENCE
projects/NetworkServer/haskell/src/Data/: TicTacToe.hs
projects/NetworkServer/haskell/src/Network/: Server.hs
projects/NetworkServer/haskell/src/Network/Server/: Chat.hs  Common.hs  TicTacToe.hs
projects/NetworkServer/haskell/src/Network/Server/Chat/: Chat.hs  Loop.hs  Main.hs
projects/NetworkServer/haskell/src/Network/Server/Common/: Accept.hs  Env.hs  HandleLens.hs  Lens.hs  Line.hs  Ref.hs
projects/NetworkServer/haskell/src/Network/Server/TicTacToe/: Game.hs  Loop.hs  Main.hs
projects/NetworkServer/haskell/src/Network/TicTacToe/: Accept.hs  Command.hs  Env.hs  Game.hs  Main.hs
projects/NetworkServer/haskell/test/: doctests.hs
projects/TicTacToe/: TicTacToe.markdown  TicTacToe.md
projects/TicTacToe-net/: TicTacToe-net.md
projects/TicTacToe-net/haskell/: tictactoe-net.cabal
projects/TicTacToe-net/haskell/src/Network/: TicTacToe.hs
projects/TicTacToe-net/haskell/src/Network/TicTacToe/: Accept.hs  Command.hs  Env.hs  HandleLens.hs  Lens.hs  Ref.hs
projects/TicTacToe/haskell/: .ghci  tictactoe.cabal
projects/TicTacToe/haskell/etc/: LICENCE
projects/TicTacToe/haskell/src/: Main.hs
projects/TicTacToe/haskell/src/Data/: TicTacToe.hs
projects/TicTacToe/haskell/src/Data/TicTacToe/: Board.hs  GameResult.hs  Interact.hs  Player.hs  Position.hs
projects/TicTacToe/haskell/test/src/Data.TicTacToe/: ArbitraryBoard.hs  ArbitraryGameResult.hs  ArbitraryPlayer.hs  ArbitraryPosition.hs
projects/io/: io.hs
share/: b.txt  c.txt  files.txt
src/: Core.hs  Course.hs  M.hs
src/Algorithm/: Anagrams.hs  Cheque.hs  EditDistance.hs  FastAnagrams.hs
src/Course/: .ghci  Alternative.hs  Anagrams.hs  Applicative.hs  Apply.hs  Bind.hs  Cheque.hs  Comonad.hs  Compose.hs  Contravariant.hs  Core.hs  ExactlyOne.hs  Extend.hs  FastAnagrams.hs  FileIO.hs  Functor.hs  Id.hs  Interactive.hs  JsonParser.hs  JsonValue.hs  List.hs  ListZipper.hs  Monad.hs  MonadTutorial.hs  MoreParser.hs  Optional.hs  Parser.hs  Person.hs  Scratch.hs  State.hs  StateT.hs  Syntax.hs  Traversable.hs  Validation.hs  Wrapped.hs
src/IO/: Interactive.hs
src/Intro/: Id.hs  Id.scala  Optional.hs  Optional.scala  Validation.hs  Validation.scala
src/L01/: Id.hs  Id.scala  Optional.hs  Optional.scala  Validation.hs  Validation.scala
src/L02/: List.hs  List.scala
src/L03/: Fluffy.hs  Fluffy.scala  Fuunctor.hs  Fuunctor.scala  Interactive.hs  Misty.hs  Misty.scala  Moonad.hs  Moonad.scala  Parser.hs  State.hs  State.scala  StateT.hs  StateT.scala
src/L04/: Fluffy.hs  ListZipper.hs  Misty.hs  Testing.hs  Tests.hs
src/L05/: Parser.hs  Person.hs  Testing.hs
src/L06/: JsonParser.hs  MoreParser.hs
src/L07/: Anagrams.hs  FastAnagrams.hs
src/L08/: BKTree.hs  EditDistance.hs  FastAnagrams.hs  MetricSpace.hs
src/L09/: BKTree.hs  Compose.hs  EditDistance.hs
src/L10/: Cheque.hs  Compose.hs
src/L10/TicTacToe/haskell/: LICENSE  TicTacToe.cabal  TicTacToe.lkshw
src/Monad/: Compose.hs  Functor.hs  Functor.scala  Fuunctor.hs  Fuunctor.scala  (+8 more)
support/: copy-tool-files.bat  copy-tool-files.sh  fp-course.cabal  hie.yaml  make-links.sh  shell.nix  stack.yaml
test/: .ghci  .gitignore  Course-Test.cabal  Package-Test.cabal  Tasty.hs  TastyLoader.hs  TestLoader.hs  course-test.cabal  doctests.hs  package-test.tix
test/Course/: ApplicativeTest.hs  ChequeTest.hs  ComonadTest.hs  ExtendTest.hs  FunctorTest.hs  Gens.hs  JsonParserTest.hs  ListTest.hs  ListZipperTest.hs  MonadTest.hs  MoreParserTest.hs  OptionalTest.hs  ParserTest.hs  StateTTest.hs  StateTest.hs  TestHelpers.hs  TraversableTest.hs  ValidationTest.hs
test/Test/: Mini.hs  Property.hs
test/Test/Course/: Mini.hs
test/Test/Tasty/: Mini.hs
test/src/: Main.hs
test/src/Intro/: ArbitraryValidation.hs
test/src/Intro/Validation/: Arbitrary.hs
test/src/L01/Validation/: Arbitrary.hs  Tests.hs  Tests.scala
test/src/L02/List/: Arbitrary.hs  Tests.hs  Tests.scala
test/src/L03/Misty/: Tests.hs
test/src/L03/Moonad/: Tests.hs
test/src/L03/Parser/: Tests.hs
test/src/L03/State/: Tests.hs
test/src/L04/ListZipper/: Arbitrary.hs  Tests.hs
test/src/L04/Misty/: Tests.hs
test/src/L05/Parser/: Tests.hs
test/src/M/: Tests.hs
test/src/Structure/: ArbitraryListZipper.hs  ArbtitraryList.hs
test/src/Structure/List/: Arbitrary.hs
test/src/Structure/ListZipper/: Arbitrary.hs
tmp/: \
(+79 files in other folders)
