Name:               Course
Version:            0.0.4
License:            BSD3
License-File:       LICENSE
Author:             Tony Morris <tmorris@tmorris.net>
Maintainer:         Tony Morris
Homepage:           https://github.com/tonymorris/course
Synopsis:           Source code for a functional programming course
Category:           Education
Description:        Source code for a course in functional programming using Haskell
Cabal-version:      >= 1.2
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/course.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:    base < 5 && >= 4
                    , HUnit
                    , containers
                    , array
                    , QuickCheck
                    , test-framework
                    , test-framework-hunit
                    , test-framework-quickcheck2

  GHC-Options:      -Wall
                    -fno-warn-orphans
                    -fno-warn-type-defaults
                    -fno-warn-name-shadowing
                    -fno-warn-unused-do-bind
                    -fno-warn-unused-imports
                    -fno-warn-unused-binds

  Hs-Source-Dirs:   src

  Exposed-Modules:  Course
                    L01.Optional
                    L01.Validation
                    L02.List
                    L03.Person
                    L03.Parser
                    L04.Fluffy
                    L04.Misty
                    L05.Testing
                    L06.JsonValue
                    L06.MoreParser
                    L06.JsonParser
                    L07.Anagrams
                    L08.FastAnagrams
                    L09.EditDistance
