name:                 course
version:              0.1.3
license:              BSD3
license-file:         etc/LICENCE
author:               Tony Morris <tmorris@tmorris.net>
author:               Mark Hibberd <mthibberd@gmail.com>
author:               Ben Sinclair <ben.d.sinclair@gmail.com>
author:               James Earl Douglas <james@earldouglas.com>
author:               Eric Torreborre <etorreborre@yahoo.com>
maintainer:           Tony Morris
copyright:            Copyright (C) 2010-2013 Tony Morris
copyright:            Copyright (C) 2012-2015 National ICT Australia Limited 
copyright:            Copyright (C) 2012      James Earl Douglas
copyright:            Copyright (C) 2012      Ben Sinclair
synopsis:             Source code for a functional programming course
category:             Education
description:          Source code for a course in functional programming using Haskell
homepage:             https://github.com/NICTA/course
bug-reports:          https://github.com/NICTA/course/issues
cabal-version:        >= 1.10
build-type:           Custom
extra-source-files:   etc/CONTRIBUTORS,
                      etc/CREDITS,
                      changelog

source-repository     head
  type:               git
  location:           git@github.com:NICTA/course.git

flag                  small_base
  description:        Choose the new, split-up base package.

library
  default-language:   Haskell2010

  build-depends:      base < 5 && >= 4
                      , QuickCheck >= 2.0
                      , doctest >= 0.9.7
                      , containers >= 0.4.0.0
                      , array >= 0.4

  ghc-options:        -Wall
                      -fno-warn-unused-binds
                      -fno-warn-unused-do-bind
                      -fno-warn-unused-imports
                      -fno-warn-type-defaults

  default-extensions: NoImplicitPrelude
                      ScopedTypeVariables
                      InstanceSigs
                      RebindableSyntax

  hs-source-dirs:     src

  exposed-modules:    Course
                      Course.Anagrams
                      Course.Applicative
                      Course.Apply
                      Course.Bind
                      Course.Cheque
                      Course.Comonad
                      Course.Compose
                      Course.Core
                      Course.Extend
                      Course.FastAnagrams
                      Course.FileIO
                      Course.Functor
                      Course.Id
                      Course.Interactive
                      Course.JsonParser
                      Course.JsonValue
                      Course.List
                      Course.ListZipper
                      Course.Monad
                      Course.MoreParser
                      Course.Optional
                      Course.Parser
                      Course.Person
                      Course.State
                      Course.StateT
                      Course.Traversable
                      Course.Validation

test-suite            doctests
  type:
                      exitcode-stdio-1.0

  main-is:
                      doctests.hs

  default-language:
                      Haskell2010

  build-depends:
                      base < 5 && >= 3
                      , doctest >= 0.9.7
                      , filepath >= 1.3
                      , directory >= 1.1
                      , QuickCheck >= 2.0
                      , template-haskell >= 2.8

  ghc-options:
                      -Wall
                      -threaded

  hs-source-dirs:
                      test
