name:                 course
version:              0.1.4
license:              BSD3
license-file:         etc/LICENCE
author:               Tony Morris <tmorris@tmorris.net>
author:               Mark Hibberd <mthibberd@gmail.com>
author:               Ben Sinclair <ben.d.sinclair@gmail.com>
author:               James Earl Douglas <james@earldouglas.com>
author:               Eric Torreborre <etorreborre@yahoo.com>
maintainer:           Tony Morris
copyright:            Copyright (C) 2010-2013 Tony Morris
copyright:            Copyright (C) 2012-2015 National ICT Australia Limited
copyright:            Copyright (C) 2012      James Earl Douglas
copyright:            Copyright (C) 2012      Ben Sinclair
copyright:            Copyright (C) 2016-2017 Data61
synopsis:             Source code for a functional programming course
category:             Education
description:          Source code for a course in functional programming using Haskell
homepage:             https://github.com/data61/fp-course
bug-reports:          https://github.com/data61/fp-course/issues
cabal-version:        >= 1.10
build-type:           Custom
tested-with:          GHC == 7.10.3, GHC == 8.0.2
extra-source-files:   etc/CONTRIBUTORS,
                      changelog

source-repository     head
  type:               git
  location:           git@github.com:data61/fp-course.git

flag                  small_base
  description:        Choose the new, split-up base package.

custom-setup
  setup-depends:
    base          >= 4.3 && <5,
    Cabal         >= 1.10,
    cabal-doctest >= 1 && <1.1

library
  default-language:   Haskell2010

  build-depends:      base < 5 && >= 4
                      , QuickCheck >= 2.0
                      , doctest >= 0.9.7
                      , containers >= 0.4.0.0
                      , array >= 0.4

  ghc-options:        -Wall
                      -fno-warn-unused-binds
                      -fno-warn-unused-do-bind
                      -fno-warn-unused-imports
                      -fno-warn-type-defaults
                      -ferror-spans

  default-extensions: NoImplicitPrelude
                      ScopedTypeVariables
                      InstanceSigs

  hs-source-dirs:     src

  exposed-modules:    Course
                      Course.Anagrams
                      Course.Applicative
                      Course.Cheque
                      Course.Comonad
                      Course.Compose
                      Course.Core
                      Course.ExactlyOne
                      Course.Extend
                      Course.FastAnagrams
                      Course.FileIO
                      Course.Functor
                      Course.Interactive
                      Course.JsonParser
                      Course.JsonValue
                      Course.List
                      Course.ListZipper
                      Course.Monad
                      Course.MonadTutorial
                      Course.MoreParser
                      Course.Optional
                      Course.Parser
                      Course.Person
                      Course.State
                      Course.StateT
                      Course.Traversable
                      Course.Validation


test-suite            tasty
  type:
                      exitcode-stdio-1.0

  main-is:
                      Tasty.hs

  default-language:
                      Haskell2010

  build-depends:
                      base < 5 && >= 3
                      , course
                      , HUnit >= 1.5
                      , QuickCheck >= 2.9
                      , tasty >= 0.11
                      , tasty-discover >= 3
                      , tasty-hunit >= 0.9
                      , tasty-quickcheck >= 0.8

  ghc-options:
                      -Wall
                      -threaded

  hs-source-dirs:
                      test
