cabal-version:        3.0
name:                 fp-course
version:              0.2
build-type:           Simple

license:              BSD-3-Clause
license-file:         etc/LICENCE
author:               Tony Morris <tmorris@tmorris.net>
                      Mark Hibberd <mthibberd@gmail.com>
                      Ben Sinclair <ben.d.sinclair@gmail.com>
                      James Earl Douglas <james@earldouglas.com>
                      Eric Torreborre <etorreborre@yahoo.com>
maintainer:           Tony Morris
copyright:            Copyright (C) 2010-2013 Tony Morris
                      Copyright (C) 2012-2015 National ICT Australia Limited
                      Copyright (C) 2012      James Earl Douglas
                      Copyright (C) 2012      Ben Sinclair
                      Copyright (C) 2016-2017 Data61

library
  default-language:   GHC2021

  build-depends:      base >= 4 && < 5
                    , containers
                    , time

  ghc-options:        -Wall
                      -fwarn-incomplete-uni-patterns
                      -fno-warn-unused-binds
                      -fno-warn-unused-do-bind
                      -fno-warn-unused-imports
                      -fno-warn-type-defaults
                      -ferror-spans

  hs-source-dirs:     src

  exposed-modules:    Test.Loader
                      Course
                      Course.Applicative
                      Course.Compose
                      Course.Core
                      Course.ExactlyOne
                      Course.FileIO
                      Course.Functor
                      Course.JsonParser
                      Course.JsonValue
                      Course.List
                      Course.Monad
                      Course.MoreParser
                      Course.Optional
                      Course.Parser
                      Course.Person
                      Course.State
                      Course.StateT
                      Course.Validation
                      Test.ApplicativeTest
                      Test.ComposeTest
                      Test.Framework
                      Test.Framework.Property
                      Test.Framework.Random
                      Test.FunctorTest
                      Test.JsonParserTest
                      Test.ListTest
                      Test.MonadTest
                      Test.MoreParserTest
                      Test.OptionalTest
                      Test.ParserTest
                      Test.StateTest
                      Test.StateTTest
