Name:               package
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           A skeleton for creating haskell packages
Category:           Development
Description:        A skeleton for creating haskell packages
Homepage:           https://github.com/tonymorris/haskell-package
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/haskell-package.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base < 5 && >= 3

  GHC-Options:
                    -Wall

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    M

  GHC-Options:      
                   -Wall
                   -O2
                   -funbox-strict-fields

