Name:               Course-Test
Version:            0.0.2
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           Tests for a functional programming course
Category:           Development
Description:        Tests for a functional programming course
Homepage:           https://github.com/tonymorris/course
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/course.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Executable          course-test
  Build-Depends:    base < 5 && >= 3
                    , QuickCheck
                    , test-framework
                    , test-framework-quickcheck2
                    , test-framework-hunit

  Ghc-Options:      -O2
                    -Wall
                    -fhpc
                    -fwarn-tabs
  
  Hs-Source-Dirs:   ../src src

  Main-Is:          Main.hs

  
