name:               network-server
version:            0.0.1
license:            BSD3
license-File:       etc/LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Copyright (C) 2013 National ICT Australia Limited 2013
synopsis:           A network server
category:           Education
description:        A network server
homepage:           https://github.com/NICTA/course
bug-reports:        https://github.com/NICTA/course/issues
cabal-version:      >= 1.10
build-type:         Custom

source-repository   head
  type:             git
  location:         git@github.com:NICTA/course.git

flag                small_base
  description:      Choose the new, split-up base package.

executable tictactoe-net
  default-language: Haskell2010

  main-is:          Network/Server/TicTacToe/Main.hs

  hs-source-dirs:   src

  build-depends:    base < 5 && >= 4
                    , tictactoe
                    , mtl
                    , containers
                    , network

  ghc-options:      -Wall

  other-modules:    Network.Server.TicTacToe

library
  default-language: Haskell2010

  build-depends:    base < 5 && >= 4
                    , tictactoe
                    , mtl
                    , containers
                    , network

  ghc-options:      -Wall

  hs-source-dirs:   src

  exposed-modules:
                    Network.Server
                    , Network.Server.ChatLoop
                    , Network.Server.Loop
                    , Network.Server.Handle
                    , Network.Server.Handle.Accept
                    , Network.Server.Handle.Env
                    , Network.Server.Handle.HandleLens
                    , Network.Server.Handle.Lens
                    , Network.Server.Handle.Line
                    , Network.Server.Handle.Ref
                    , Network.Server.TicTacToe
                    , Network.Server.TicTacToe.Command
                    , Network.Server.TicTacToe.Env
                    , Network.Server.TicTacToe.Game

test-suite          doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3,
                    doctest >= 0.9.7,
                    filepath >= 1.3,
                    directory >= 1.1,
                    QuickCheck >= 2.0

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
