name:               network-server
version:            0.0.1
license:            BSD3
license-File:       etc/LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Copyright (C) 2013 National ICT Australia Limited 2013
synopsis:           A network server
category:           Education
description:        A network server
homepage:           https://github.com/data61/fp-course
bug-reports:        https://github.com/data61/fp-course/issues
cabal-version:      >= 1.10
build-type:         Custom

source-repository   head
  type:             git
  location:         git@github.com:data61/fp-course.git

flag                small_base
  description:      Choose the new, split-up base package.

executable network-tictactoe
  default-language: Haskell2010

  main-is:          Network/Server/TicTacToe/Main.hs

  hs-source-dirs:   src

  build-depends:    base < 5 && >= 4
                    , network-server
                    , mtl
                    , containers
                    , network
                    , QuickCheck

  ghc-options:      -Wall

executable network-chat
  default-language: Haskell2010

  main-is:          Network/Server/Chat/Main.hs

  hs-source-dirs:   src

  build-depends:    base < 5 && >= 4
                    , network-server
                    , mtl
                    , containers
                    , network
                    , QuickCheck

  ghc-options:      -Wall

library
  default-language: Haskell2010

  build-depends:    base < 5 && >= 4
                    , mtl
                    , containers
                    , network
                    , QuickCheck

  ghc-options:      -Wall

  hs-source-dirs:   src

  exposed-modules:
                     Network.Server.Chat.Chat
                   , Network.Server.Chat.Loop
                   , Network.Server.Chat
                   , Network.Server.Common.Accept
                   , Network.Server.Common.Env
                   , Network.Server.Common.HandleLens
                   , Network.Server.Common.Lens
                   , Network.Server.Common.Line
                   , Network.Server.Common.Ref
                   , Network.Server.Common
                   , Network.Server.TicTacToe.Game
                   , Network.Server.TicTacToe.Loop
                   , Network.Server.TicTacToe
                   , Network.Server

test-suite          doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3,
                    doctest >= 0.9.7,
                    filepath >= 1.3,
                    directory >= 1.1,
                    QuickCheck >= 2.0

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
