name:               tictactoe
version:            0.0.3
license:            BSD3
license-File:       etc/LICENCE
author:             Tony Morris <tmorris@tmorris.net>
maintainer:         Tony Morris
copyright:          Copyright (C) 2010-2013 Tony Morris
copyright:          Copyright (C) 2012,2013 National ICT Australia Limited 2012, 2013
copyright:          Copyright (C) 2012      James Earl Douglas
copyright:          Copyright (C) 2012      Ben Sinclair
synopsis:           A model of the game of Tic-Tac-Toe
category:           Education
description:        A model of the game of Tic-Tac-Toe enforcing game properties with types
homepage:           https://github.com/NICTA/course
bug-reports:        https://github.com/NICTA/course/issues
cabal-version:      >= 1.10
build-type:         Custom

source-repository   head
  type:             git
  location:         git@github.com:NICTA/course.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language: Haskell2010

  build-depends:    base < 5 && >= 4
                    , containers
                    , ansi-terminal

  ghc-options:      -Wall

  hs-source-dirs:   src

  exposed-modules:
                    Data.TicTacToe
                    , Data.TicTacToe.Board
                    , Data.TicTacToe.Position
                    , Data.TicTacToe.Player
                    , Data.TicTacToe.GameResult
                    , Data.TicTacToe.Interact

executable tic-tac-toe
  default-language: Haskell2010

  build-depends:    base < 5 && >= 3
                    , containers
                    , ansi-terminal

  hs-source-dirs:   src

  main-is:          Main.hs

  ghc-options:      -Wall

test-suite          doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3,
                    doctest >= 0.9.7,
                    filepath >= 1.3,
                    directory >= 1.1,
                    QuickCheck >= 2.0

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
